--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-Latest update (2019/04/29)
+Latest update (2019-05-02)
+- Added tournaments!
+  - Tournaments can be posted along with details and a Challonge link.
+  - Challonge brackets will be embedded on the Tournament view page
+
+Last update (2019/04/29)
 - This page was added!
 - SF2 scores have a different "Verified" icon
 - Song title and basic info now embed when shared in Discord/etc
