--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 Latest Update (2019-05-22)
 - Score deletion from Weekly Challenge now works properly
 - Weekly challenge should now update weekly as intended
+- Updated Weekly Challenge page
+  - Score submission window is now collapsible!
 
 Last Update (2019-05-10)
 - Weekly challenge added!
