--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,18 @@
-Latest Update (2019-05-26)
+Latest Update (2019-06-04)
+- Forgot to update this changelog like a week ago, so this is me doing that
+- Added song thumbnails on homepage
+- Fixed full song issue, full songs now show separately from arcade length songs
+- You can now only choose the difficulties available for a specific song
+- Songs and thumbnails are scraped from Pump Out, the script to do this for yourself is on the GitHub repo
+  - Check the Info & About / Resources tab for the site's source code!
+- Began work on new leaderboard options 
+
+Last Update (2019-05-26)
 - Fixed error 500 when checking a user's page that has no scores uploaded
 - Major changes to song loading (may break leaderboard temporarily)
 - Added song length option
 
-Last Update (2019-05-22)
+Changes (2019-05-22)
 - Score deletion from Weekly Challenge now works properly
 - Weekly challenge should now update weekly as intended
 - Updated Weekly Challenge page
