--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,8 @@ Latest Update (2019-06-04)
 - You can now only choose the difficulties available for a specific song
 - Songs and thumbnails are scraped from Pump Out, the script to do this for yourself is on the GitHub repo
   - Check the Info & About / Resources tab for the site's source code!
-- Began work on new leaderboard options 
+- Began work on new leaderboard options
+- Various minor bug fixes
 
 Last Update (2019-05-26)
 - Fixed error 500 when checking a user's page that has no scores uploaded
