--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
-Latest Update(2016-06-06)
+Latest Update (2016-06-10)
+- Moved the changelog (yay, you found it!)
+- SO
+- MANY
+- A N I M A T I O N S
+  - I think they look good but if I went overboard please tell me
+
+Last Update (2016-06-06)
 - Better leaderboard search!
   - You can search for songs from the old system now
   - You can specify song length (Arcade, Remix, Short Cut, Full Song)
@@ -6,7 +13,7 @@ Latest Update(2016-06-06)
 - Properly centered judgements on homepage
 - Small bug fixes
 
-Last Update (2019-06-04)
+Changes Update (2019-06-04)
 - Forgot to update this changelog like a week ago, so this is me doing that
 - Added song thumbnails on homepage
 - Fixed full song issue, full songs now show separately from arcade length songs
@@ -18,7 +25,7 @@ Last Update (2019-06-04)
 - Moved weekly challenge system to new score system, only relevant difficulties are displayed
 - Various minor bug fixes
 
-Last Update (2019-05-26)
+Changes Update (2019-05-26)
 - Fixed error 500 when checking a user's page that has no scores uploaded
 - Major changes to song loading (may break leaderboard temporarily)
 - Added song length option
