--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@ Latest Update (2018-07-09)
 - Big fixes and minor changes
   - No need to refresh the submit score page to make difficulties show up!
   - Edited popup besides Difficulties label on said page to better reflect its current state
+  - Minor updates to animation
+  - Page now scrolls to the top when navigating between pages
 
 Last Update (2019-06-29)
 - WE'RE BACK! The site is finally back online thanks to Cube's hosting!
