--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,16 @@
-Latest Update (2019-07-09)
+Latest Update (2019-07-24)
+- Minor changes to the About page and footer
+  - Added a Buy Me a Coffee button for site support!
+  - Anyone can support the site using the button or the buymeacoff.ee/dj505 link!
+
+Last Update (2019-07-09)
 - Big fixes and minor changes
   - No need to refresh the submit score page to make difficulties show up!
   - Edited popup besides Difficulties label on said page to better reflect its current state
   - Minor updates to animation
   - Page now scrolls to the top when navigating between pages
 
-Last Update (2019-06-29)
+Changes (2019-06-29)
 - WE'RE BACK! The site is finally back online thanks to Cube's hosting!
 - Profile pages are live! To view:
   - Click on the username attached to any post on the homepage
